# FiberServer

./: .dockerignore  .gitignore  AGENT.md  CMakeLists.txt  README.md  build.sh  docker-compose.dev.yml  logs.sh  start_services.sh
FiberServer/: fd_manager.cpp  fd_manager.h  fiber.cpp  fiber.h  hook.cpp  hook.h  iomanager.cpp  iomanager.h  scheduler.cpp  scheduler.h  stream.cpp  stream.h  thread.cpp  thread.h  time.cpp  time.h
FiberServer/base/: config.cpp  config.h  log.cpp  log.h  macro.h  mutex.cpp  mutex.h  nocopyable.h  util.cpp  util.h
FiberServer/db/: db.h  db_executor.cpp  db_executor.h  mysql.cpp  mysql.h  soci_db.cpp  soci_db.h
FiberServer/my/: application.cpp  application.h  artifact_metadata.cpp  artifact_metadata.h  chunkManager.cpp  chunkManager.h  fastdfs.cpp  fastdfs.h  mysqlop.cpp  mysqlop.h  mysqlop_soci.cpp
FiberServer/net/: address.cpp  address.h  bytearray.cpp  bytearray.h  endian.h  socket.cpp  socket.h  socket_stream.cpp  socket_stream.h  tcp_server.cpp  tcp_server.h
FiberServer/net/http/: http.cpp  http.h  http11_parser.cpp  http_parser.cpp  http_parser.h  http_server.cpp  http_server.h  http_session.cpp  http_session.h  httpclient_parser.cpp  httpclient_parser.h  httpclient_parser.rl  servlet.cpp  servlet.h
FiberServer/servlets/: all_servlet.h  artifact_auth.cpp  artifact_auth.h  artifact_query_servlet.cpp  artifact_query_servlet.h  artifact_token_servlet.cpp  artifact_token_servlet.h  chunkupload_servlet.cpp  chunkupload_servlet.h  config_servlet.cpp  config_servlet.h  deletefile_servlet.cpp  deletefile_servlet.h  dirupload_servlet.cpp  dirupload_servlet.h  download_servlet.cpp  download_servlet.h  login_servlet.cpp  login_servlet.h  md5_servlet.cpp  md5_servlet.h  myfiles_servlet.cpp  myfiles_servlet.h  register_servlet.cpp  register_servlet.h  status_servlet.cpp  status_servlet.h  upload_servlet.cpp  upload_servlet.h
FiberServer/tests/: artifact_metadata_contract.cpp  server_main.cpp  test.cpp
FiberServer/util/: hash_util.cpp  hash_util.h  json_util.cpp  json_util.h  perf_util.h
RPC/: config.cpp  config.h  log.cpp  log.h
RPC/base/: Nocopyable.h  mutex.cpp  mutex.h  singleton.h  util.cpp  util.h
docker/: Dockerfile.dev  config.docker.yml  nginx.conf
docker/fdfs/: client.conf
docker/mysql-init/: 001_schema.sql  002_rename_file_owner.sql  003_artifact_info.sql  004_project_token.sql
docs/: ARTIFACT_REPOSITORY.md  BENCHMARK_RESULTS.md  FASTDFS_HOOK.md  FiberServer_100_Interview_QA.md  GMP_IMPLEMENTATION_SUMMARY.md  PROJECT_PRESENTATION.md  README.md  SOCI_MIGRATION.md  WSL2_DOCKER.md
plans/: gmp-scheduler-plan.md  upload-download-plan.md
scripts/: docker_bench.sh  docker_bench_artifact.sh  docker_bench_business.sh  docker_bench_matrix.sh  docker_bench_rate.sh  docker_build.sh  docker_e2e.sh  docker_run_server.sh  docker_test.sh
tests/: main.cpp
wrk_bench/: deletefile.lua  download.lua  login.lua  md5check.lua  myfiles.lua  register.lua  run_all.sh
